--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >-
   _config.yml. It will appear in your document head meta (for Google search
   results) and in your feed.xml site description.
 baseurl: /weedy
-url: 'http://lexoyo.me/weedy/'
+url: 'http://lexoyo.me'
 twitter_username: weedy
 github_username: ''
 plugins:
