--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: 'Apanage CBD, boutique en ligne, garantie qualité'
 email: contact@apanagecbd.com
 description: >-
-  Write an awesome description for your new site here. You can edit this line in
-  _config.yml. It will appear in your document head meta (for Google search
-  results) and in your feed.xml site description.
+  Le meilleur du CBD garanti zéro THC. Tous nos produits sont de qualité
+  ultra-premium; ils sont fabriqués par des producteurs haut de gamme, selon des
+  process à la pointe de l’industrie du CBD.
 baseurl: /
 url: 'https://apanagecbd.com'
 twitter_username: ''
