--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: 'Apanage CBD Shop, boutique en ligne'
 email: contact@apanagecbd.com
 description: >-
 CBD de qualité ULTRA-PREMIUM, garanti ZÉRO THC détectable en cas de test de dépistage.
-baseurl: /
+baseurl: '/'
 url: 'https://apanagecbd.com'
 twitter_username: ''
 github_username: ''
