--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: 'Apanage CBD Shop, boutique en ligne'
 email: contact@apanagecbd.com
-description: >-
-CBD de qualité ULTRA-PREMIUM, garanti ZÉRO THC détectable en cas de test de dépistage.
+description: CBD de qualité ULTRA-PREMIUM, garanti ZÉRO THC détectable en cas de test de dépistage.
 baseurl: '/'
 url: 'https://apanagecbd.com'
 twitter_username: ''
